kubernetes/rendered/production/services/go-backend/apps_v1_deployment_go-backend-kustomize_go-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-backend
  namespace: go-backend-kustomize
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-backend
  template:
    metadata:
      labels:
        app: go-backend
    spec:
      containers:
        - env:
            - name: DATABASE_URL
              valueFrom:
                secretKeyRef:
                  key: uri
                  name: go-backend-pg-app
            - name: OTEL_EXPORTER_OTLP_ENDPOINT
              value: grafana-k8s-monitoring-alloy-receiver.monitoring:4317
            - name: OTEL_RESOURCE_ATTRIBUTES
              value: deployment.environment=staging
          image: 857059614049.dkr.ecr.us-east-2.amazonaws.com/services/go-backend:0.3.0
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /livez
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
          name: go-backend
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            limits:
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
      securityContext:
        fsGroup: 1001
        runAsGroup: 1001
        runAsNonRoot: true
        runAsUser: 1001
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: go-backend
      terminationGracePeriodSeconds: 30
