kubernetes/rendered/production/services/go-backend/gateway.networking.k8s.io_v1_httproute_go-backend-kustomize_traefik.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: gateway-traefik-kustomize.production.kubestarterkit.com
  name: traefik
  namespace: go-backend-kustomize
spec:
  hostnames:
    - gateway-traefik-kustomize.production.kubestarterkit.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  rules:
    - backendRefs:
        - name: go-backend
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
