kubernetes/rendered/production/services/go-backend/networking.k8s.io_v1_ingress_go-backend-kustomize_minimal-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ingress-nginx-kustomize.staging.kubestarterkit.com
  name: minimal-nginx
  namespace: go-backend-kustomize
spec:
  ingressClassName: nginx
  rules:
    - host: ingress-nginx-kustomize.staging.kubestarterkit.com
      http:
        paths:
          - backend:
              service:
                name: go-backend
                port:
                  number: 8080
            path: /
            pathType: Prefix
