kubernetes/rendered/production/services/go-backend/networking.k8s.io_v1_ingress_go-backend-kustomize_traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    external-dns.alpha.kubernetes.io/hostname: ingress-traefik-kustomize.production.kubestarterkit.com
  name: traefik
  namespace: go-backend-kustomize
spec:
  ingressClassName: traefik
  rules:
    - host: ingress-traefik-kustomize.production.kubestarterkit.com
      http:
        paths:
          - backend:
              service:
                name: go-backend
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ingress-traefik-kustomize.production.kubestarterkit.com
      secretName: ingress-traefik-kustomize-tls
